# news-trading

./: .gitignore  agg_trades_downloader.py  backtest_dask.py  backtest_trades.py  compile_news.py  distrubution_analysis.py  grid_search_optimise.py  ideal_trades_analysis.py  plot_data.py  plot_reduce_trades.py  precache_ohlc.py  prophet_analysis.py  quick_analyse.py  retrieve_data.py  retrieve_dataset.py  retrieve_news.py  trading_simulator.py  websocket_client.py
agg-trades-download/: agg_trades_downloader.py
analysis/: prophet_analysis.py
binance_downloader/: setup.py
binance_downloader/retrieve_binance/: agg_trades_downloader.py  plot_data.py  retrieve_dataset.py  retrieve_news.py
binance_downloader/retrieve_binance.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
binance_ws/: Cargo.toml
binance_ws/src/: log4rs.yml  main.rs  models.rs
news/: binance_api.py  functions.py
news-backtester/: backtest_trades.py  decay.py  filter_news.py  main.py  results_filter.py  run.py
old/: analyse_news.py
prediction/: predict_ideal_trade.py  prophet_analysis.py
trading-console/back-end/: app.py  security.py
trading-console/back-end/app/: routes.py
trading-console/back-end/endpoints/: __init__.py  routes.py
trading-console/front-end/src/: App.js  index.js
