[package]
name = "binance_ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
url = "2.2"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.28"
serde_derive = "1.0"
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
hmac = "0.11.0"
sha2 = "0.9"
hex = "0.4"
appinsights = "0.2.3"
lazy_static = "1.4"
opentelemetry = { version = "0.20" }
opentelemetry-stdout = { version = "0.1" }
opentelemetry-application-insights = "0.27.0"